--- a/lun/index.html
+++ b/lun/index.html
@@ -1,46 +1,76 @@
-<!DOCTYPE html>
-<html><head>
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  gtag('config', 'G-XHPPDNKH57');
-</script>
+  <title>Columnas en LUN – Kenneth Bunker, Cientista Político</title>
+  <meta name="description" content="Revisa las columnas de Kenneth Bunker publicadas en Las Últimas Noticias. Análisis político actual en un lenguaje claro y directo.">
+  <meta name="author" content="Kenneth Bunker">
+  <meta name="keywords" content="Kenneth Bunker, columnas LUN, Las Últimas Noticias, opinión política Chile, análisis político, columnas de opinión, cientista político, Kenneth Bunker LUN">
 
-   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://kennethbunker.github.io/lun" />
 
-    <title>LUN - Kenneth Bunker</title>
-    <meta name="description" content="Academic, Consultant, Columnist">
-    <meta name="author" content='Kenneth Bunker'>
+  <!-- Open Graph Metadata -->
+  <meta property="og:title" content="Kenneth Bunker – Columnas en Las Últimas Noticias (LUN)" />
+  <meta property="og:description" content="Explora las columnas de Kenneth Bunker publicadas en LUN sobre política, sociedad y actualidad en Chile." />
+  <meta property="og:image" content="https://kennethbunker.github.io/img/me2.png" />
+  <meta property="og:url" content="https://kennethbunker.github.io/lun" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Kenneth Bunker – Cientista Político" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kenneth Bunker – Columnas en LUN" />
+  <meta name="twitter:description" content="Opinión política en Las Últimas Noticias. Lee las columnas de Kenneth Bunker sobre democracia, elecciones y actualidad." />
+  <meta name="twitter:image" content="https://kennethbunker.github.io/img/me2.png" />
 
-    
-    <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Columnas de Kenneth Bunker en LUN",
+    "description": "Página oficial con las columnas de opinión de Kenneth Bunker publicadas en Las Últimas Noticias (LUN), abordando temas de política y sociedad chilena.",
+    "url": "https://kennethbunker.github.io/lun",
+    "author": {
+      "@type": "Person",
+      "name": "Kenneth Bunker",
+      "url": "https://kennethbunker.github.io"
+    }
+  }
+  </script>
 
- <style> 
- .parent{
-display:flex;
-gap: 5px;
-}       
+  <!-- Fonts & Styles -->
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
-      .img-container {
-        display: flex;
-        text-align: left; /* Add this line */
-      }
-      .img-container img {
-        width: 10%;
-        padding: 5px;
-      }
+  <!-- Custom Page Style -->
+  <style> 
+    .parent {
+      display: flex;
+      gap: 5px;
+    }       
+    .img-container {
+      display: flex;
+      text-align: left;
+    }
+    .img-container img {
+      width: 10%;
+      padding: 5px;
+    }
+  </style>  
 
-</style>  
-
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XHPPDNKH57');
+  </script>
 </head>
+
 
     <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
