--- a/prensa/index.html
+++ b/prensa/index.html
@@ -2,26 +2,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Kenneth Bunker in the Global Press – International Media Coverage</title>
-  <meta name="description" content="International press mentions and commentary from Kenneth Bunker, political scientist and analyst, featured in major global media outlets.">
+  <title>Kenneth Bunker en la Prensa Chilena – Opinión y Análisis Político</title>
+  <meta name="description" content="Revisa las apariciones de Kenneth Bunker en medios chilenos como La Tercera, El Mercurio, Ex-Ante y más. Opinión y análisis sobre política y democracia en Chile.">
   <meta name="author" content="Kenneth Bunker">
-  <meta name="keywords" content="Kenneth Bunker, international press, political analyst, global media coverage, Chile politics expert, Latin America commentary, Reuters, The Economist, international opinion">
+  <meta name="keywords" content="Kenneth Bunker, prensa chilena, entrevistas Chile, Ex-Ante, El Mercurio, La Tercera, análisis político, cientista político Chile, medios de comunicación Chile">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://kennethbunker.github.io/press" />
+  <link rel="canonical" href="https://kennethbunker.github.io/prensa" />
 
   <!-- Open Graph Metadata -->
-  <meta property="og:title" content="Kenneth Bunker in the International Press" />
-  <meta property="og:description" content="View Kenneth Bunker's expert commentary and quotes in international media, including The Economist, Reuters, and more." />
+  <meta property="og:title" content="Kenneth Bunker en la Prensa Chilena" />
+  <meta property="og:description" content="Entrevistas, citas y comentarios de Kenneth Bunker en medios nacionales como La Tercera, El Mercurio, Ex-Ante, y otros." />
   <meta property="og:image" content="https://kennethbunker.github.io/img/me2.png" />
-  <meta property="og:url" content="https://kennethbunker.github.io/press" />
+  <meta property="og:url" content="https://kennethbunker.github.io/prensa" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Kenneth Bunker – Political Scientist" />
+  <meta property="og:site_name" content="Kenneth Bunker – Cientista Político" />
 
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Kenneth Bunker in Global Media – Press Coverage" />
-  <meta name="twitter:description" content="Explore Kenneth Bunker's appearances and expert analysis in global news outlets. Political science perspectives on Latin America and beyond." />
+  <meta name="twitter:title" content="Kenneth Bunker en la Prensa Chilena" />
+  <meta name="twitter:description" content="Análisis y opinión política de Kenneth Bunker en medios como La Tercera, Ex-Ante, y El Mercurio." />
   <meta name="twitter:image" content="https://kennethbunker.github.io/img/me2.png" />
 
   <!-- Structured Data -->
@@ -29,9 +29,9 @@
   {
     "@context": "https://schema.org",
     "@type": "CollectionPage",
-    "name": "Kenneth Bunker – International Media Mentions",
-    "description": "Global press coverage of political scientist Kenneth Bunker, including interviews and quotes in international outlets.",
-    "url": "https://kennethbunker.github.io/press",
+    "name": "Kenneth Bunker en la Prensa Chilena",
+    "description": "Apariciones de Kenneth Bunker en medios de comunicación nacionales de Chile, con enfoque en política, elecciones y reformas institucionales.",
+    "url": "https://kennethbunker.github.io/prensa",
     "author": {
       "@type": "Person",
       "name": "Kenneth Bunker",
@@ -40,7 +40,7 @@
   }
   </script>
 
-  <!-- Google Fonts & CSS -->
+  <!-- Fonts & Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
@@ -54,6 +54,7 @@
     gtag('config', 'G-XHPPDNKH57');
   </script>
 </head>
+
 
     <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
