--- a/covers/index.html
+++ b/covers/index.html
@@ -1,44 +1,77 @@
-<!DOCTYPE html>
-<html><head>
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  gtag('config', 'G-XHPPDNKH57');
-</script>
+  <title>Portadas de Prensa – Kenneth Bunker en la Primera Página</title>
+  <meta name="description" content="Apariciones de Kenneth Bunker en la portada de diarios y revistas nacionales. Cientista político en medios de alto impacto.">
+  <meta name="author" content="Kenneth Bunker">
+  <meta name="keywords" content="Kenneth Bunker portada, primera plana, portadas de prensa, diarios de Chile, revistas, cientista político en medios, Kenneth Bunker covers, apariciones mediáticas">
 
-   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://kennethbunker.github.io/covers" />
 
-    <title>Covers - Kenneth Bunker</title>
-    <meta name="description" content="Academic, Consultant, Columnist">
-    <meta name="author" content='Kenneth Bunker'>
+  <!-- Open Graph Metadata -->
+  <meta property="og:title" content="Kenneth Bunker – Portadas de Prensa y Revistas" />
+  <meta property="og:description" content="Explora las portadas de diarios y revistas donde aparece Kenneth Bunker. Opinión influyente en el debate público chileno." />
+  <meta property="og:image" content="https://kennethbunker.github.io/img/me2.png" />
+  <meta property="og:url" content="https://kennethbunker.github.io/covers" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Kenneth Bunker – Cientista Político" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kenneth Bunker en Portadas de Prensa" />
+  <meta name="twitter:description" content="Revisa las portadas de medios donde aparece Kenneth Bunker como voz experta en política." />
+  <meta name="twitter:image" content="https://kennethbunker.github.io/img/me2.png" />
 
-    
-    <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "name": "Kenneth Bunker – Portadas de Prensa",
+    "description": "Compilación de las apariciones en portada del cientista político Kenneth Bunker en medios impresos y digitales.",
+    "url": "https://kennethbunker.github.io/covers",
+    "author": {
+      "@type": "Person",
+      "name": "Kenneth Bunker",
+      "url": "https://kennethbunker.github.io"
+    }
+  }
+  </script>
 
- <style> 
- .parent{
-display:flex;
-gap: 5px;
-}       
+  <!-- Fonts & Styles -->
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
-      .img-container {
-        display: flex;
-      }
-      .img-container img {
-        width: 33%;
-        padding: 5px;
-      }
+  <!-- Custom Page Styles -->
+  <style> 
+    .parent {
+      display: flex;
+      gap: 5px;
+    }       
 
-</style>  
+    .img-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
 
+    .img-container img {
+      width: 33%;
+      padding: 5px;
+    }
+  </style>  
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XHPPDNKH57');
+  </script>
 </head>
 
     <body><div class="container mt-5">
