--- a/contact/index.html
+++ b/contact/index.html
@@ -1,38 +1,70 @@
-<!DOCTYPE html>
-<html><head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  gtag('config', 'G-XHPPDNKH57');
-</script>
-   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Contacto – Kenneth Bunker, Cientista Político</title>
+  <meta name="description" content="Ponte en contacto con Kenneth Bunker para entrevistas, colaboraciones académicas, asesoría política y medios.">
+  <meta name="author" content="Kenneth Bunker">
+  <meta name="keywords" content="Kenneth Bunker contacto, entrevistas, asesoría política, consultoría política, cientista político, contacto académico, medios de comunicación">
 
-    <title>Contact - Kenneth Bunker</title>
-    <meta name="description" content="Academic, Consultant, Columnist">
-    <meta name="author" content='Kenneth Bunker'>
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://kennethbunker.github.io/contact" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- Open Graph Metadata -->
+  <meta property="og:title" content="Contacto – Kenneth Bunker" />
+  <meta property="og:description" content="Formulario de contacto para entrevistas, proyectos y consultas relacionadas con política, medios y academia." />
+  <meta property="og:image" content="https://kennethbunker.github.io/img/me2.png" />
+  <meta property="og:url" content="https://kennethbunker.github.io/contact" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Kenneth Bunker – Cientista Político" />
 
-    
-    <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
+  <!-- Twitter Card Metadata -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Contacto – Kenneth Bunker" />
+  <meta name="twitter:description" content="Contacta a Kenneth Bunker para entrevistas, asesorías o colaboraciones políticas y académicas." />
+  <meta name="twitter:image" content="https://kennethbunker.github.io/img/me2.png" />
 
-    <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
-  
-      <style>
-      img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>  
-    
+  <!-- Structured Data (Schema.org) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contacto Kenneth Bunker",
+    "url": "https://kennethbunker.github.io/contact",
+    "description": "Formulario de contacto de Kenneth Bunker para medios, investigación, docencia o consultoría política.",
+    "author": {
+      "@type": "Person",
+      "name": "Kenneth Bunker",
+      "url": "https://kennethbunker.github.io"
+    }
+  }
+  </script>
+
+  <!-- Fonts & Styles -->
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
+  <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
+
+  <!-- Custom Styling -->
+  <style>
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XHPPDNKH57');
+  </script>
 </head>
+
 
     <body><div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
@@ -41,10 +73,7 @@
           Kenneth Bunker
         </a>
         <div class="navbar-nav flex-row flex-wrap justify-content-center"> 
-                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/">
-                        About
-                    </a>           
-                        <span class="nav-item navbar-text mx-1">/</span>        
+
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/cv.pdf">
                         CV
                     </a>
@@ -59,12 +88,15 @@
                         <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
                         Columns
-                    </a>              
+                    </a>
+                        <span class="nav-item navbar-text mx-1">/</span>
+                    <a class="nav-item nav-link" href="https://kennethbunker.github.io/theseus">
+                        Book
+                    </a>                                    
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
-                    </a>   
-        </div>
+                    </a>  
     </nav>
 </div>
 <hr>
