--- a/theseus/index.html
+++ b/theseus/index.html
@@ -39,6 +39,11 @@
 <meta property="og:title" content="Chile's Transformation Amidst Crisis: The Theseus Paradox – Kenneth Bunker" />
 <meta property="og:description" content="Explore Kenneth Bunker's new book on Chile's political evolution and constitutional reform. Pre-order now from Springer and other retailers." />
 <meta property="og:image" content="https://kennethbunker.github.io/img/book1.png" />
+<meta property="og:image:secure_url" content="https://kennethbunker.github.io/img/book1.png" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
 <meta property="og:url" content="https://kennethbunker.github.io/theseus/" />
 <meta property="og:site_name" content="Kenneth Bunker – Official Site" />
 <meta property="og:type" content="book" />
