--- a/theseus/index.html
+++ b/theseus/index.html
@@ -12,7 +12,7 @@
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Theseus - Kenneth Bunker</title>
+    <title>The Theseus Paradox - Kenneth Bunker</title>
     <meta name="description" content="Academic, Consultant, Columnist">
     <meta name="author" content='Kenneth Bunker'>
 
@@ -163,7 +163,7 @@
 
     <a href="https://link.springer.com/book/9783031964626" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Palgrave_Macmillan_Logo.svg/440px-Palgrave_Macmillan_Logo.svg.png" alt="Palgrave Macmillan" style="height: 40px;"></a>
 
-   <a href="https://link.springer.com/book/9783031964626" target="_blank"><img src="https://link.springer.com/oscar-static/images/darwin/header/img/logo-springer-nature-link-3149409f62.svg" alt="Springer Nature" style="height: 20px;"></a>
+   <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" target="_blank"><img src="https://link.springer.com/oscar-static/images/darwin/header/img/logo-springer-nature-link-3149409f62.svg" alt="Springer Nature" style="height: 20px;"></a>
 
    <a href="https://www.exlibris.ch/de/buecher-buch/english-books/kenneth-bunker/chiles-transformation-amidst-crisis/id/9783031964626/?srsltid=AfmBOorOVat8vbgTNcgX9kmWrQHJFxxjJM-GggW5FNHGFvrJArF6Esik" target="_blank"><img src="https://exlibris.blob.core.windows.net/cms/1047/exl_logo_rotaufweiss_300dpi.jpg" alt="Ex Libris" style="height: 40px;"></a>
 
