--- a/index.html
+++ b/index.html
@@ -116,7 +116,17 @@
 
 
 
-    <body><div class="container mt-5">
+    <body>
+
+  <!-- Top Thin Banner -->
+  <div style="background-color: #f8f9fa; color: #000; font-size: 12px; padding: 5px 0; text-align: center; border-bottom: 1px solid #ddd;">
+    📢 New book out now! <a href="https://kennethbunker.github.io/theseus" style="text-decoration: underline;">Learn more</a>
+  </div>
+
+  <img src="../img/banner.jpg" style="width: 100%; max-height: 30px; object-fit: cover;" alt="Banner">
+
+
+  <div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
         <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">
           
