--- a/index.html
+++ b/index.html
@@ -118,13 +118,11 @@
 
     <body>
 
-  <!-- Top Thin Banner -->
-  <div style="background-color: #f8f9fa; color: #000; font-size: 12px; padding: 5px 0; text-align: center; border-bottom: 1px solid #ddd;">
-    📢 New book out now! <a href="https://kennethbunker.github.io/theseus" style="text-decoration: underline;">Learn more</a>
+<body>
+  <!-- Top Banner Image -->
+  <div style="width: 100%; text-align: center; background-color: #fff; border-bottom: 1px solid #ddd;">
+    <img src="../img/banner.jpg" alt="Banner" style="width: 100%; max-height: 50px; object-fit: cover;">
   </div>
-
-  <img src="../img/banner.jpg" style="width: 100%; max-height: 30px; object-fit: cover;" alt="Banner">
-
 
   <div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
