--- a/index.html
+++ b/index.html
@@ -119,10 +119,19 @@
     <body>
 
 <body>
-  <!-- Top Banner Image -->
-  <div style="width: 100%; text-align: center; background-color: #fff; border-bottom: 1px solid #ddd;">
-    <img src="../img/banner.jpg" alt="Banner" style="width: 100%; max-height: 100px; object-fit: cover;">
-  </div>
+<!-- Top Banner Image -->
+<div style="
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 5px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  text-align: center;
+">
+  <img src="../img/banner.jpg" alt="Banner" style="width: 100%; max-height: 100px; object-fit: cover;">
+</div>
 
   <div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
