--- a/covers/index.html
+++ b/covers/index.html
@@ -74,7 +74,27 @@
   </script>
 </head>
 
-    <body><div class="container mt-5">
+    <body>
+
+
+<!-- Clickable Top Banner -->
+<a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview" target="_blank" style="text-decoration: none;">
+  <div style="
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 5px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    text-align: center;
+  ">
+    <img src="../img/banner.jpg" alt="Banner" style="width: 100%; max-height: 100px; object-fit: cover;">
+  </div>
+</a>
+
+
+<div class="container mt-5">
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
         <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io/">
           
