--- a/press/index.html
+++ b/press/index.html
@@ -45,6 +45,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
+<style>
+  body {
+    margin: 40px;
+  }
+</style>
+
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XHPPDNKH57"></script>
   <script>
