--- a/covers/index.html
+++ b/covers/index.html
@@ -45,6 +45,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
+style>
+  body {
+    margin: 40px;
+  }
+</style>
+
   <!-- Custom Page Styles -->
   <style> 
     .parent {
@@ -79,7 +85,13 @@
 
 <!-- Clickable Top Banner -->
 <a href="https://link.springer.com/book/9783031964626?utm_medium=affiliate&utm_source=commission_junction_authors&utm_campaign=CONR_BOOKS_ECOM_GL_PBOK_ALWYS_DEEPLINK&utm_content=deeplink&utm_term=PID101446916&CJEVENT=c4bf33ef501f11f0808703740a18b8f9#overview" target="_blank" style="text-decoration: none;">
-  <div style="
+  <div class="banner-container">
+    <img src="../img/banner.jpg" alt="Banner" class="banner-image">
+  </div>
+</a>
+
+<style>
+  .banner-container {
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
@@ -88,10 +100,21 @@
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     text-align: center;
-  ">
-    <img src="../img/banner.jpg" alt="Banner" style="width: 100%; max-height: 100px; object-fit: cover;">
-  </div>
-</a>
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .banner-container:hover {
+    transform: scale(1.03);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+  }
+
+  .banner-image {
+    width: 100%;
+    max-height: 100px;
+    object-fit: cover;
+    display: block;
+  }
+</style>
 
 
 <div class="container mt-5">
