--- a/contact/index.html
+++ b/contact/index.html
@@ -47,7 +47,7 @@
   
   <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
 
-style>
+<style>
   body {
     margin: 40px;
   }
