--- a/theseus/index.html
+++ b/theseus/index.html
@@ -22,7 +22,7 @@
     
     <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
-style>
+<style>
   body {
     margin: 40px;
   }
