--- a/theseus/index.html
+++ b/theseus/index.html
@@ -228,6 +228,8 @@
 
    <a href="https://akateeminen.com/search.php?search=kenneth+bunker&product=9783031964626" target="_blank"><img src="https://akateeminen.com/images/index/logo-1195.jpg" alt="Akasteeminen" style="height: 40px;"></a>
 
+   <a href="https://shop.lehrmittelverlag.lu.ch/detail/ISBN-9783031964626/Bunker-Kenneth/Chiles-Transformation-Amidst-Crisis" target="_blank"><img src="https://shop.lehrmittelverlag.lu.ch/htdyn/9WVYRPCWNVF/logo-large.webp" alt="Lehrmittelverlag" style="height: 40px;"></a>
+
 
   </div>
 </div>
