--- a/theseus/index2.html
+++ b/theseus/index2.html
@@ -255,7 +255,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -291,7 +291,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -326,7 +326,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -361,7 +361,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -397,7 +397,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="https://doi.org/10.7910/DVN/UNM2S7" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="https://github.com/kennethbunker/theseus" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -432,7 +432,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="https://doi.org/10.7910/DVN/JO4KUY" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="https://github.com/kennethbunker/theseus" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -467,7 +467,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="https://doi.org/10.7910/DVN/9MM5JG" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="https://github.com/kennethbunker/theseus" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -502,7 +502,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -536,7 +536,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="https://doi.org/10.7910/DVN/0GROZS" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="https://github.com/kennethbunker/theseus" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -571,7 +571,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -605,7 +605,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -639,7 +639,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="https://doi.org/10.7910/DVN/JCFVYX" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="https://github.com/kennethbunker/theseus" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -674,7 +674,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -709,7 +709,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -744,7 +744,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="https://doi.org/10.7910/DVN/NRRSIX" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="https://github.com/kennethbunker/theseus" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -778,7 +778,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="https://doi.org/10.7910/DVN/S6243I" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="https://github.com/kennethbunker/theseus" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -812,7 +812,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -846,7 +846,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
@@ -881,7 +881,7 @@
     <strong>DOI:</strong> <a href="https://doi.org/10.1007/978-3-031-96462-6_1" style="color: #0077cc;">https://doi.org/10.1007/978-3-031-96462-6_1</a><br><br>
 
     <div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
-      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">FULL TEXT</a>
+      <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">TEXT</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">DATA</a>
       <a href="#" style="text-decoration: none; color: #0077cc; font-weight: bold;">CODE</a>
     </div>
