--- a/interviews/index.html
+++ b/interviews/index.html
@@ -141,6 +141,8 @@ style>
 <hr>
 <ul>
 
+<li><strong>Ex Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-primarias-oficialistas-la-derrota-cultural-de-la-izquierda-ya-se-produjo/">Kenneth Bunker y primarias oficialistas: “La derrota cultural de la izquierda ya se produjo”
+.</a> 28 June, 2025.</li>
 
 <li><strong>Ex Ante</strong>. <a href="https://www.ex-ante.cl/pensiones-el-riesgo-de-un-descuelgue-por-la-izquierda-y-el-volanteo-del-fa-que-congrego-a-solo-30-personas/">Kenneth Bunker por magras cifras económicas: “Cuando anda mal el bolsillo, las personas buscan respuestas en otro domicilio político”.</a> 19 December, 2024.</li>
 
