--- a/press/index.html
+++ b/press/index.html
@@ -145,7 +145,7 @@
 <hr> 
 <ul>
 
-<li><strong>Financial Times</strong>. <a href="https://on.ft.com/3GkBBn4">Chilean left picks communist presidential candidate in face of far-right surge.</a> 16 30 June, 2025.</li>
+<li><strong>Financial Times</strong>. <a href="https://on.ft.com/3GkBBn4">Chilean left picks communist presidential candidate in face of far-right surge.</a> 30 June, 2025.</li>
 
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2025-06-29/chile-communist-jara-scores-blowout-win-in-presidential-primary?srnd=undefined">Chilean Communist Jeannette Jara Scores Blowout Win in Presidential Primary.</a> 30 June, 2025.</li>
 
