--- a/columns/index.html
+++ b/columns/index.html
@@ -182,7 +182,7 @@ mark {
 <hr>
 <ul>
 
-
+<li>20250630 - Cruzar el río</li>  
 <li>20250618 - La grieta en el modelo</li>  
 <li>20250610 - Tiempos dificiles</li>  
 <li>20250606 - Reserva moral</li>  
@@ -564,8 +564,9 @@ mark {
 <hr>
 <ul>
 
-
-<li>20250613 - De relato a resultado, llegó la hora de responder </li>
+<li>20250630 - Cancelación definitiva: el ocaso de Boric y el Frente Amplio</li>
+<li>20250620 - Una primaria, muchas fracturas</li>
+<li>20250613 - De relato a resultado, llegó la hora de responder</li>
 <li>20250606 - Cuando vuelvan las veredas picadas</li>
 <li>20250530 - Boric en el país de las maravillas</li>
 <li>20250523 - La nueva clase gobernante</li>
