--- a/columns/index.html
+++ b/columns/index.html
@@ -827,6 +827,15 @@ mark {
 
 <hr>
 
+<h2 id="diario-financiero-">Diario Financiero</h2>
+<p><a href="https://www.df.cl/"><em>Diario Financiero</em></a></p>
+<hr>
+<ul>
+<li>20250630 - <a href="https://www.df.cl/">Tormenta en el horizonte.</a></li>
+</ul>
+
+
+<hr>
 
 <h2 id="la-tercera">La Tercera</h2>
 <p><a href="https://www.latercera.cl"><em>La Tercera</em></a></p>
