--- a/index.html
+++ b/index.html
@@ -2215,7 +2215,7 @@ ong>El Muro</strong>. <a href="http://elmuro.cl/noticias/ps-la-dc-los-partidos-t
 <ul>
 
 
-<li><strong>Financial Times</strong>. <a href="https://on.ft.com/3GkBBn4">Chilean left picks communist presidential candidate in face of far-right surge.</a> 30 June, 2025.</li>
+<li><strong>Financial Times</strong>. <a href="https://on.ft.com/3GkBBn4"><mark style="background: yellow">Chilean left picks communist presidential candidate in face of far-right surge.</a></mark> 30 June, 2025.</li>
 
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2025-06-29/chile-communist-jara-scores-blowout-win-in-presidential-primary?srnd=undefined">Chilean Communist Jeannette Jara Scores Blowout Win in Presidential Primary.</a> 30 June, 2025.</li>
 
