--- a/lun/index.html
+++ b/lun/index.html
@@ -149,7 +149,7 @@ style>
 
 <div class="img-container">
 <img src="/img/lun/20250618.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250630.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
