--- a/lun/index.html
+++ b/lun/index.html
@@ -150,7 +150,7 @@ style>
 <div class="img-container">
 <img src="/img/lun/20250618.jpeg">
 <img src="/img/lun/20250630.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250702.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
