--- a/columns/index.html
+++ b/columns/index.html
@@ -182,6 +182,7 @@ mark {
 <hr>
 <ul>
 
+<li>20250702 - El factor decisivo</li>  
 <li>20250630 - Cruzar el río</li>  
 <li>20250618 - La grieta en el modelo</li>  
 <li>20250610 - Tiempos dificiles</li>  
