--- a/lun/index.html
+++ b/lun/index.html
@@ -151,7 +151,7 @@ style>
 <img src="/img/lun/20250618.jpeg">
 <img src="/img/lun/20250630.jpeg">
 <img src="/img/lun/20250702.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250703.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
