--- a/columns/index.html
+++ b/columns/index.html
@@ -182,6 +182,8 @@ mark {
 <hr>
 <ul>
 
+<li>20250704 - De lobos y ovejas</li>  
+<li>20250703 - Devastación sin respuesta</li>  
 <li>20250702 - El factor decisivo</li>  
 <li>20250630 - Cruzar el río</li>  
 <li>20250618 - La grieta en el modelo</li>  
@@ -196,8 +198,8 @@ mark {
 <li>20250429 - El bluff</li>  
 <li>20250425 - Martinez y Marcel</li>  
 <li>20250412 - El tono importa</li>  
-<li>20250404- El crespúsculo del ídolo</li>  
-<li>20250328- ¿Diablos por conocer?</li>  
+<li>20250404 - El crespúsculo del ídolo</li>  
+<li>20250328 - ¿Diablos por conocer?</li>  
 <li>20250327 - El país necesita garantías</li>  
 <li>20250326 - Bueno para todo</li>  
 <li>20250323 - ¿Un outsider?</li>  
