--- a/lun/index.html
+++ b/lun/index.html
@@ -152,7 +152,7 @@
 <img src="/img/lun/20250630.jpeg">
 <img src="/img/lun/20250702.jpeg">
 <img src="/img/lun/20250703.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20250704.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
