--- a/index.html
+++ b/index.html
@@ -114,7 +114,24 @@
 </script>
 
 
+<style>
+  .book-box {
+    max-width: 300px;
+    margin: 40px auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
 
+  .book-box:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+</style>
 
     <body>
 
@@ -206,6 +223,17 @@
 
 <p>Click <a href="https://kennethbunker.github.io/columns">here</a> to read my columns in the press.
 
+<div class="book-box">
+  <p style="margin: 0;">
+    <strong>Chile's Transformation Amidst Crisis:<br>
+    The Theseus Paradox</strong><br><br>
+    <a href="https://kennethbunker.github.io/theseus/" target="_blank">
+      <img src="../img/book1.png" alt="Book Image" width="170" height="170" style="border: none;">
+    </a><br><br>
+    NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – AUGUST 2025
+  </p>
+</div>
+
 <div style="border: 1px solid #999; border-radius: 12px; padding: 40px 20px; margin: 40px 0; width: 100%; text-align: center; box-sizing: border-box;">
   <p style="margin: 0;">
     <strong>Chile's Transformation Amidst Crisis:<br>
@@ -216,6 +244,8 @@
     NEW BOOK – <a href="https://www.dpbolvw.net/click-101446916-12898971?url=https%3A%2F%2Flink.springer.com%2Fbook%2F9783031964626" style="text-decoration: none; font-weight: bold; color: #0077cc;">PRE-ORDER</a> – AUGUST 2025
   </p>
 </div>
+
+
 
 <p>I received my PhD in political science from The London School of Economics. The purpose of my PhD was to understand how and why parties form electoral and government coalitions in presidentialism. You can read an example of that work <a href="https://doi.org/10.18042/cepc/rep.186.06">here</a>.</p>
 
