--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
 
+<!-- Styles -->
 <style>    
   body {
     margin: 40px;
@@ -56,6 +57,26 @@
     color: black;
   }
 </style>  
+
+<style>
+  .book-box {
+    width: 100%; /* take full width of column */
+    margin: 20px 0;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-sizing: border-box;
+  }
+
+  .book-box:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+</style>
 
 <!-- SEO Keywords -->
 <meta name="keywords" content="Kenneth Bunker, Theseus Paradox, Chile politics book, Chile constitutional crisis, Latin American political science, democratic reform, Chile transformation, new book on Chile, Springer political books, Chile constitutional reform, neoliberalism in Chile, crisis in emerging democracies, political science 2025, global south democracy" />
@@ -112,27 +133,6 @@
   ]
 }
 </script>
-
-
-<style>
-  .book-box {
-    width: 100%; /* take full width of column */
-    margin: 20px 0;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 12px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    box-sizing: border-box;
-  }
-
-  .book-box:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
-</style>
 
 
     <body>
